m-2/3 creazione pulsante next per il carosello

--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
                         <button style="margin-top: 6rem;">></button>
                     </div>
                 </div> -->
-
+<button id="next">next</button>
             </div>
         </div>
     </main>
