--- a/index.html
+++ b/index.html
@@ -48,6 +48,7 @@
     
     
     <!-- JS -->
+    <script src="./js/function.js"></script>
     <script src="./js/script.js"></script>
 </body>
 </html>
