--- a/index.html
+++ b/index.html
@@ -42,6 +42,9 @@
                 </div> -->
 <button id="next">next</button>
 <button id="back">back</button>
+<button id="play">play</button>
+<button id="stop">Stop</button>
+<button id="reverse">Reverse</button>
             </div>
         </div>
     </main>
